--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,107 @@
-.test{
-    width: 1000px;
-    height: 1000px;
-    background-color: aqua;
-    border: aqua 20px solid;
+.toolbar{
+    width: 100%;
+    height: 100px;
+    display: inline-flex;
+    background-image: linear-gradient(#004A84, #00A3FF);
+}
+
+.items-wrapper {
+    display: inline-flex;
+    margin: 0 auto;
+}
+
+.logo {
+    margin-right: 100px;
+}
+
+.tb-item{
+    align-items: center;
+    display: flex;
+}
+
+.link {
+    display: inline-flex;
+    margin-right: 20px;
+}
+
+.text {
+    font-weight: 700;
+    font-size: 18px;
+    align-items: center;
+    color: #FFFFFF;
+    font-family: monospace;
+    font-style: normal;
+    margin-left: 5px;
+}
+
+.main-links {
+    margin-right: 100px;
+    margin-left: 100px;
+}
+
+.subscribe {
+    border: 1px solid white;
+    padding: 6px;
+    border-radius: 7px;
+}
+
+.main-content {
+    background-image: url(background-image.png);
+    text-align: center;
+    height: calc(100vh - 116px);
+}
+
+.error404 {
+    font-size: 100px;
+    font-weight: 700;
+    font-family: sans-serif;
+    color: #0460A9;
+}
+
+.error-subject {
+    font-size: 32px;
+    font-family: sans-serif;
+    font-weight: 700;
+    line-height: 32px;
+}
+
+.error-text {
+    font-weight: 400;
+    font-size: 22px;
+    font-family: sans-serif;
+
+}
+
+.center-content {
+    min-height: 42%;
+    padding-top: 100px;
+}
+
+.cards {
+    background-color: rgba(4, 96, 169, 0.2);
+    padding-top: 20px;
+    text-align: center;
+    height: 45%;
+}
+
+.see-more {
+    font-weight: 700;
+    font-family: sans-serif;
+    font-size: 26px;
+    margin-top: 18px;
+}
+.brand {
+    background-color: rgba(4, 96, 169, 0.2);
+}
+
+
+.card {
+    width: 200px;
     border-radius: 20px;
+    text-align: center;
+    background-color: white;
+}
+
+.see-all{
+
 }
