--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,22 @@
+div {
+    font-family: sans-serif;
+}
+img { 
+    object-fit: contain;
+  }
+  
+
+.main {
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+}
 .toolbar{
     width: 100%;
     height: 100px;
     display: inline-flex;
     background-image: linear-gradient(#004A84, #00A3FF);
+    background-size: cover;
 }
 
 .items-wrapper {
@@ -46,6 +60,7 @@
 }
 
 .main-content {
+    background-size: auto;
     background-image: url(background-image.png);
     text-align: center;
     height: calc(100vh - 116px);
@@ -79,9 +94,15 @@
 
 .cards {
     background-color: rgba(4, 96, 169, 0.2);
-    padding-top: 20px;
+    padding: 20px;
     text-align: center;
+    align-items: center;
     height: 45%;
+}
+
+.card-wrapper {
+    display: inline-flex;
+
 }
 
 .see-more {
@@ -89,19 +110,105 @@
     font-family: sans-serif;
     font-size: 26px;
     margin-top: 18px;
+    margin-bottom: 15px;
 }
 .brand {
-    background-color: rgba(4, 96, 169, 0.2);
+    color: #004a84;
 }
 
 
 .card {
-    width: 200px;
-    border-radius: 20px;
-    text-align: center;
+    margin-right: 20px;
+    width: 250px;
+    border-radius: 17px;
+    box-shadow: 0px 1px 3px rgb(0 0 0 / 30%);
+    /* text-align: center; */
+    display: flex;
+    flex-direction: column;
     background-color: white;
+    padding: 0 0 10px 0;
 }
 
+.line1-icon {
+    width: 20px;
+    height: 20px;
+}
+
+.line1 {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    font-size: 12px;
+    line-height: 8.5px;
+    letter-spacing: 0.1em;
+    height: 30px;
+}
+
+.card-icon {
+    margin-left: 6px;
+}
+
+.line1stext {
+    margin-left: 50px;
+}
+
+.line2 {
+    background-color: #20385E;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.line2sub {
+    margin: 0 auto;
+}
+
+.line3 {
+    font-size: 10px;
+    letter-spacing: 0.2em;
+    border-bottom: 1px solid #ECECEC;
+    height: 28px;
+    display: flex;
+    margin: 0 auto;
+    width: 100%;
+    align-items: center;
+}
+
+.line3sub {
+    margin: 0 auto;
+}
+
+.line4 {
+    font-weight: 700;
+    font-size: 14px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+}
+.line5 {
+    font-size: 18px;
+    letter-spacing: -0.02em;
+    height: 40px;
+}
+.line5sub {
+    color: #20385E;
+}
+.line6 {
+    font-size: 12px;
+    height: 30px;
+}
+
+.line7 {
+    background-color: #23B2F9;
+    box-shadow: 0px 2px 3px rgb(0 0 0 / 15%);
+    height: 19px;
+    margin: 10px 10px 0 10px;
+    padding: 13px 10px 10px 10px;
+    border-radius: 30px;
+}
 .see-all{
 
 }
