--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,31 @@
 div {
     font-family: sans-serif;
 }
-img { 
-    object-fit: contain;
-  }
   
 
 .main {
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
+    margin: 0!important;
+    padding: 0!important;
 }
 .toolbar{
-    width: 100%;
-    height: 100px;
-    display: inline-flex;
     background-image: linear-gradient(#004A84, #00A3FF);
+    background-repeat: no-repeat;
     background-size: cover;
+    align-items: center
 }
 
 .items-wrapper {
-    display: inline-flex;
-    margin: 0 auto;
+    /* display: inline-flex;
+    margin: 0 auto; */
+    align-items: center
+}
+
+.toolbar-icon {
+    margin: 17px;
 }
 
 .logo {
-    margin-right: 100px;
+    float: right;
 }
 
 .tb-item{
@@ -48,10 +48,7 @@ img {
     margin-left: 5px;
 }
 
-.main-links {
-    margin-right: 100px;
-    margin-left: 100px;
-}
+
 
 .subscribe {
     border: 1px solid white;
@@ -64,6 +61,9 @@ img {
     background-image: url(background-image.png);
     text-align: center;
     height: calc(100vh - 116px);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 100px;
 }
 
 .error404 {
@@ -81,10 +81,16 @@ img {
 }
 
 .error-text {
-    font-weight: 400;
     font-size: 22px;
     font-family: sans-serif;
+    padding-left: 25px;
+    padding-right: 25px;
+}
 
+@media (max-width: 768px) { 
+    .error404 {
+        margin-bottom: 100px;
+    }
 }
 
 .center-content {
